# vLLM-Tool-Call-Parser

./: .gitignore  README.md  benchmark.py  compare_llm.py  compare_vllm.py  pyproject.toml  requirements.txt
huggingface_space/: README.md  app.py  requirements.txt
notebooks/: vLLM_Comparison_Colab.ipynb
src/parser_benchmark/: __init__.py  llm_client.py  structured_output.py  vllm_comparison.py
src/parser_benchmark.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/parser_benchmark/benchmark/: __init__.py  memory.py  metrics.py  runner.py
src/parser_benchmark/models/: __init__.py  tool_call.py
src/parser_benchmark/parsers/: __init__.py  base.py  incremental_parser.py  regex_parser.py  state_machine_parser.py
tests/: __init__.py  test_edge_cases.py  test_incremental_parser.py  test_models.py  test_parsers.py  test_state_machine_parser.py  test_streaming.py
